Some more macro work

--- a/preamble.tex
+++ b/preamble.tex
@@ -480,13 +480,13 @@
 \newcommand*{\ancestors}{\mathbf{A}}
 \newcommand*{\theancestors}{\ancestors}
 
-\newcommand*{\guarantorassignments}{\mathbf{G}}
-\newcommand*{\guarantorassignmentsunderlastrotation}{\mathbf{G}^*}
+\newcommand*{\guarantorassignments}{\mathbf{M}}
+\newcommand*{\guarantorassignmentsunderlastrotation}{\mathbf{M}^*}
 \newcommand*{\accumulationstatistics}{\mathbf{I}}
-\newcommand*{\reporters}{\mathbf{R}}
+\newcommand*{\reporters}{\mathbf{G}}
 \newcommand*{\isticketed}{\mathbf{T}}
 \newcommand*{\isaudited}{\mathbf{U}}
-\newcommand*{\justbecameavailable}{\mathbf{W}} % TODO: Rename $\justbecameavailable$ to \mathbf{V} or whatever and `\mathbf{w}` becomes `\reporters` and `\reporters` becomes `\mathbf{G}`. `\mathbf{G}` would become something else.
+\newcommand*{\justbecameavailable}{\mathbf{V}}
 \newcommand*{\deferredtransfersstatistics}{\mathbf{X}}
 
 % Extrinsics.
