--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -22,7 +22,7 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 \subsection{History and Queuing}
 
-Accumulation of a work-package/work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
+Accumulation of a work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
   \accumulated &\in \seq{\protoset{\hash}}_\epochlen \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
