Fix the banderout usage

--- a/preamble.tex
+++ b/preamble.tex
@@ -484,9 +484,9 @@
 \newcommand*{\guarantorassignmentsunderlastrotation}{\mathbf{M}^*}
 \newcommand*{\accumulationstatistics}{\mathbf{I}}
 \newcommand*{\reporters}{\mathbf{G}}
+\newcommand*{\justbecameavailable}{\mathbf{R}}
 \newcommand*{\isticketed}{\mathbf{T}}
 \newcommand*{\isaudited}{\mathbf{U}}
-\newcommand*{\justbecameavailable}{\mathbf{V}}
 \newcommand*{\deferredtransfersstatistics}{\mathbf{X}}
 
 % Extrinsics.
